crates/language-v2/tests/src/fail/p2_specifiers/hard_fork_not_found/test.stderr
error: Hard fork 'Shanghai' does not exist in the language definition.
  --> src/fail/p2_specifiers/hard_fork_not_found/test.rs:25:83
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = From(Shanghai))]
   |                                                                                   ^^^^^^^^
